# jamliquor

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  cliff.toml  deny.toml  lcov.info  package-lock.json  release.toml  rust-toolchain.toml  rustfmt.toml  state.rs
.cursor/: settings.json
.github/workflows/: ci.yml  coverage.yml  docs.yml
.taskmaster/: config.json  state.json
.taskmaster/docs/: PRD.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_002.txt  task_003.txt  task_004.txt  task_008.txt  tasks.json
.windsurf/rules/: taskmaster.md
benches/: core_benchmarks.rs
docs/: ARCHITECTURE.md  DISCLAIMER.md  EDGE.md  SUMMARY.md  book.toml  custom.css  index.md
docs/book/: 404.html  AI.html  ARCHITECTURE.html  CLEANROOM.html  DECENTRALIZATION.html  DISCLAIMER.html  EDGE.html  MANIFESTO.html  MILESTONE.html  PQC.html  README.html  index.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
docs/src/: AI.md  ARCHITECTURE.md  AUDIT_FAILURES.md  AUDIT_MAPPING.md  CLEANROOM.md  CONFORMATION.md  DECENTRALIZATION.md  DISCLAIMER.md  EDGE.md  MANIFESTO.md  MILESTONE.md  MINIMAL_FIXES.md  NETWORK.md  PQC.md  README.md  SIMPLICITY.md  SUMMARY.md  VECTORS.md  building.md  index.md
examples/: README.md
proptest-regressions/integration/: core_tests.txt
proptest-regressions/unit/: mod.txt  prop_state_tests.txt
scripts/: PRD.txt
src/: coretime.rs  importer.rs  lib.rs  main.rs  schema.rs  state.rs
tasks/: task_001.txt  task_002.txt  task_005.txt  task_006.txt  task_007.txt  task_009.txt  task_010.txt  tasks.json
tests/: README.md  block_validation_tests.rs  lib.rs
tests/common/: mod.rs
tests/integration/: core_tests.rs  mod.rs  vector_diagnostics.rs  (+1 more)
(+7 files in other folders)
