[package]
name = "jamliquor"
version = "0.1.0"
edition = "2024"
authors = ["SHA888 <https://github.com/SHA888>"]
homepage = "https://jamliquor.xyz"
license = "GPL-3.0"
repository = "https://github.com/jamliqr/jamliquor.git"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
